# chalk

./: .dockerignore  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  chalk.example.toml
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: cargo-audit.yml  ci.yml  cla.yml  release.yml
crates/ad-sync/: Cargo.toml
crates/ad-sync/src/: client.rs  lib.rs  models.rs  ou.rs  password.rs  sync.rs  username.rs
crates/agent/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: ad_sync.rs  common.rs  export.rs  google_sync.rs  import.rs  init.rs  migrate.rs  mod.rs  passwords.rs  serve.rs  status.rs  sync.rs  update.rs  webhook.rs
crates/console/: Cargo.toml  SECURITY_AUDIT.md
crates/console/src/: auth.rs  csrf.rs  lib.rs  sync_settings.rs  webhooks.rs
crates/console/src/api/: mod.rs  oneroster.rs
crates/console/templates/: ad_sync.html  ad_sync_settings.html  base.html  dashboard.html  google_sync_settings.html  identity_settings.html  login.html  login_magic.html  set_password.html  sync_settings.html
crates/console/templates/google_sync/: history.html  index.html  users.html
crates/console/templates/identity/: auth_log.html  badges.html  index.html  saml_setup.html  sessions.html
crates/console/templates/migration/: classlink.html  classlink_cutover.html  classlink_review.html  clever.html  clever_cutover.html  clever_review.html  index.html
crates/console/templates/settings/: api_tokens.html  audit_log.html  index.html
crates/console/templates/sso/: detail.html  form.html  list.html
crates/console/templates/sync/: history.html  index.html  result.html
crates/console/templates/users/: detail.html  list.html
crates/console/templates/webhooks/: detail.html  form.html  list.html
crates/core/: Cargo.toml
crates/core/src/: auth.rs  config.rs  cookies.rs  crypto.rs  error.rs  http.rs  ldap.rs  lib.rs  mail.rs  passwords.rs  sync.rs
crates/core/src/connectors/: mod.rs  oneroster_client.rs
crates/core/src/connectors/infinite_campus/: mapper.rs  mod.rs
crates/core/src/connectors/oneroster_csv/: mod.rs
crates/core/src/connectors/powerschool/: mapper.rs  mod.rs  models.rs
crates/core/src/connectors/skyward/: mapper.rs  mod.rs
crates/core/src/db/: mod.rs  postgres.rs  repository.rs  sqlite.rs
crates/core/src/migration/: classlink.rs  clever.rs  mod.rs
crates/core/src/models/: academic_session.rs  access_token.rs  ad_sync.rs  api_token.rs  audit.rs  class.rs  common.rs  course.rs  demographics.rs  enrollment.rs  google_sync.rs  idp.rs  mod.rs  org.rs  sso.rs  sync.rs  token_scope.rs  user.rs
crates/core/src/oneroster_csv/: manifest.rs  mod.rs  reader.rs  rows.rs  writer.rs
crates/core/src/webhooks/: changeset.rs  crypto.rs  delivery.rs  mod.rs  models.rs  scoping.rs
crates/core/tests/: postgres_smoke.rs  repository_parity.rs
crates/google-sync/: Cargo.toml
crates/google-sync/src/: auth.rs  client.rs  lib.rs  models.rs  ou.rs  sync.rs  username.rs
crates/hosted/: Cargo.toml  README.md
crates/hosted/migrations/postgres/: 000_meta.sql  001_signup_sis_provider.sql
crates/hosted/src/: admin.rs  context.rs  cron_due.rs  keys.rs  lib.rs  main.rs  marketplace.rs  meta.rs  middleware.rs  notify.rs  scheduler.rs  signup.rs  state_cache.rs  tenant.rs  tenant_assert.rs  tenant_config.rs  tenant_config_loader.rs
crates/hosted/src/commands/: deprovision.rs  import_toml.rs  migrate_all.rs  mod.rs  provision.rs  reset_admin_password.rs  rotate_master_key.rs  serve.rs  tenant.rs
crates/hosted/tests/: context_db_loader.rs  registry.rs  resolver.rs  rotate_master_key.rs  signup.rs  state_cache.rs  tenant_admin.rs  tenant_binding.rs
crates/idp/: Cargo.toml
crates/idp/src/: auth.rs  certs.rs  classlink_compat.rs  clever_compat.rs  compat_common.rs  lib.rs  oidc.rs  picture.rs  portal.rs  qr.rs  routes.rs  saml.rs
crates/idp/templates/: class_roster.html  login.html  login_error.html  login_picture.html  login_qr.html  oidc_consent.html  password_reset_result.html  portal.html  saml_post_binding.html  teacher_classes.html
crates/marketplace/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/telemetry/src/: collector.rs  lib.rs  models.rs  reporter.rs
docs/: README.md  ad-sync.md  architecture.md  classlink-sso.md  clever-sso.md  configuration.md  deployment.md  getting-started.md  google-sync.md  idp-setup.md  migration-classlink.md  migration-clever.md  oneroster-api.md  security.md  sso-partner-guide.md  sso-school-setup.md  webhooks.md
infra/: README.md  bootstrap.sh  env.example  runbook.md
infra/backup/: README.md
infra/caddy/: Caddyfile
infra/deployment/: README.md
infra/systemd/: chalk-hosted.service
migrations/postgres/: 001_initial_schema.sql  002_idp_google_sync.sql  003_admin_audit.sql  004_config_overrides.sql  005_webhooks.sql  006_sso_partners.sql  007_sso_compat.sql  008_access_tokens.sql  010_password_reset_tokens.sql  011_junction_indexes.sql  012_api_tokens.sql  013_tenant_config.sql  014_webhook_deliveries_cascade.sql  015_api_token_scope.sql  016_magic_login_tokens.sql  017_sso_partner_audience.sql  018_sso_partner_launch_url.sql
migrations/sqlite/: 001_initial_schema.sql  002_idp_google_sync.sql  003_admin_audit.sql  004_config_overrides.sql  005_webhooks.sql  006_sso_partners.sql  007_sso_compat.sql  008_access_tokens.sql  009_ad_sync_groups.sql  010_password_reset_tokens.sql  011_junction_indexes.sql  012_api_tokens.sql  013_tenant_config.sql  014_webhook_deliveries_cascade.sql  015_api_token_scope.sql  016_magic_login_tokens.sql  017_sso_partner_audience.sql  018_sso_partner_launch_url.sql
plans/: 1.2.2_ISSUES.md  BASE_PRD.md  SSO_PRD.md
signatures/: cla.json
skills/infinite-campus/: README.md
skills/powerschool/: README.md
skills/skyward/: README.md
testing/: README.md
testing/_common/: precheck.sh
testing/google-workspace/: README.md
testing/key-rotation/: README.md  run.sh
testing/ldap-target/: README.md  docker-compose.yml  run.sh
testing/migration-safety/: run.sh  (+1 more)
(+23 files in other folders)
