[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/console",
    "crates/idp",
    "crates/google-sync",
    "crates/agent",
    "crates/marketplace",
    "crates/telemetry",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "migrate"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
axum = "0.7"
askama = "0.12"
askama_axum = "0.4"
tower-http = { version = "0.6", features = ["cors", "fs", "set-header"] }
wiremock = "0.6"
sha2 = "0.10"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
rcgen = "0.13"
argon2 = { version = "0.5", features = ["std"] }
rand = "0.8"
base64 = "0.22"
tower = "0.5"
csv = "1.3"
aes-gcm = "0.10"
tempfile = "3"
