[package]
name = "chalk-cli"
version = "1.2.4"
edition = "2021"

[[bin]]
name = "chalk"
path = "src/main.rs"

[dependencies]
chalk-core = { path = "../core" }
chalk-console = { path = "../console" }
chalk-idp = { path = "../idp" }
chalk-google-sync = { path = "../google-sync" }
chalk-ad-sync = { path = "../ad-sync" }
chalk-agent = { path = "../agent" }
chalk-marketplace = { path = "../marketplace" }
chalk-telemetry = { path = "../telemetry" }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
tempfile = { workspace = true }
futures-util = { workspace = true }
