[package]
name = "chalk-console"
version = "1.0.0"
edition = "2021"

[dependencies]
chalk-core = { path = "../core" }
axum = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
chrono = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
serde_urlencoded = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
