[package]
name = "chalk-console"
version = "1.6.3"
edition = "2021"

[dependencies]
chalk-core = { path = "../core" }
chalk-google-sync = { path = "../google-sync" }
chalk-ad-sync = { path = "../ad-sync" }
axum = { workspace = true, features = ["multipart"] }
askama = { workspace = true }
askama_axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
serde_urlencoded = "0.7"
urlencoding = { workspace = true }
parking_lot = "0.12"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
