[package]
name = "chalk-core"
version = "1.6.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
csv = { workspace = true }
aes-gcm = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
hkdf = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = { workspace = true }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
futures-util = { workspace = true }
