[package]
name = "chalk-idp"
version = "1.0.0"
edition = "2021"

[dependencies]
chalk-core = { path = "../core" }
axum = { workspace = true }
askama = { workspace = true }
askama_axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
rcgen = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tower = { workspace = true }
sqlx = { workspace = true }
